# langchain-study

./: .editorconfig  .gitignore  README.md  example_env  pyproject.toml  requirements.txt
app/: 5_2_AplicacaoStreamlit.py
notebooks/: 0_Install.ipynb  10_1_LangGraphBasico.ipynb  10_2_LangGraphDecisao.ipynb  2_1_GPTCompletions.ipynb  2_2_GPTChat.ipynb  3_1_LangchainBasico.ipynb  3_2_Caching.ipynb  3_3_Templates.ipynb  3_4_Simple.ipynb  3_5_SequentialChain.ipynb  3_6_RouterChain.ipynb  3_8_Agents.ipynb  3_9_ReactAgent.ipynb  4_1_Embeddings.ipynb  5_1_AplicacaoWebStreamLit.ipynb  6_1_Pinecone.ipynb  7_1_BuscaSemanticaJuridica.ipynb  8_1_Gemini.ipynb  Install.ipynb
