[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search==8.0.1",
    "graphviz==0.20.3",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.3",
    "langchain==0.2.7",
    "langchain-experimental==0.0.62",
    "langchain-google-genai==1.0.7",
    "langchain-openai==0.1.16",
    "langchainhub==0.1.20",
    "langgraph==0.3.34",
    "matplotlib>=3.10.6",
    "numexpr==2.10.1",
    "numpy==1.26.4",
    "openai==1.35.13",
    "pandas-datareader==0.10.0",
    "pinecone-client==4.1.2",
    "pymupdf==1.24.7",
    "pyyaml==6.0.1",
    "scikit-learn==1.5.1",
    "streamlit==1.36.0",
    "tqdm==4.66.4",
    "wikipedia==1.4.0",
]
